changes to mysql connection

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,11 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      mysql:
+      mysql-app:
         image: mysql
         env:
           MYSQL_ROOT_PASSWORD: admin
           MYSQL_DATABASE: practice
+          MYSQL_USER: test
+          MYSQL_PASSWORD: test
         ports:
           - 3306:3306
         options: >-
@@ -35,6 +37,14 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+
+      - name: Wait for MySQL to be ready
+        run: |
+          until docker exec $(docker ps -q --filter ancestor=mysql) mysqladmin --user=root --password=admin --host=mysql-app --port=3306 ping --silent; do
+            echo "Waiting for MySQL..."
+            sleep 5
+          done
+          echo "MySQL is ready!"
 
       - name: Build and Test with Maven
         run: mvn clean verify
