--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=practice1
 
-spring.datasource.url=jdbc:mysql://db:3306/practice
+spring.datasource.url=jdbc:mysql://mysql-app:3306/practice
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
