--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,11 +40,11 @@ jobs:
 
       - name: Wait for MySQL to be ready
         run: |
-          until docker exec $(docker ps -q --filter ancestor=mysql) mysqladmin --user=root --password=admin --host=mysql-app --port=3306 ping --silent; do
+          until docker exec $(docker ps -q --filter ancestor=mysql-app) mysqladmin --user=root --password=admin --host=mysql-app --port=3306 ping --silent; do
             echo "Waiting for MySQL..."
             sleep 5
           done
-          echo "MySQL is ready!"
+          echo "MySQL is ready!""
 
       - name: Build and Test with Maven
         run: mvn clean verify
