--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
          SPRING_DATASOURCE_USERNAME: test
          SPRING_DATASOURCE_PASSWORD: test
       depends_on:
-      - mysql-app
+      - mysql
 
-   mysql-app:
+   mysql:
       image: mysql
       ports:
       - 3306:3306
