--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: check docker compose version
+        run: docker-compose version
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
