--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,8 +32,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: check docker compose version
-        run: docker-compose version
+      - name: install docker compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
