--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,13 @@ services:
          SPRING_DATASOURCE_PASSWORD: test
       depends_on:
       - mysql
+      restart: unless-stopped
 
    mysql:
       image: mysql
       ports:
       - 3306:3306
-      restart: always
+      restart: unless-stopped
       environment:
          MYSQL_DATABASE: practice
          MYSQL_ROOT_PASSWORD: admin
