--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -59,3 +59,5 @@ jobs:
 
       - name: Run Docker Compose
         run: docker-compose up -d --build
+      - name: list containers
+        run: docker ps
