--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -41,9 +41,16 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-
+      
+      - name: Docker login
+        uses: docker/login-action@v2
+        with: 
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+          
       - name: List running containers
         run: docker ps
+        
       - name: Wait for MySQL to be ready
         run: |
           until docker exec $(docker ps -q --filter ancestor=mysql) mysqladmin --user=root --password=admin --host=localhost --port=3306 ping --silent; do
