--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -71,7 +71,7 @@ jobs:
 
 
       -  name: Generate deployment package
-         run: zip -r deploy.zip . -x '*.git*'
+         run: zip -r deploy.zip target/practice1-0.0.1-SNAPSHOT.jar
       
       -  name: Deploy to EB
          uses: einaregilsson/beanstalk-deploy@v18
